# ai-agent-app-template

./: .env.example  .gitignore  README.md  TEMPLATE.md  pyproject.toml
app/: api.py  ui_streamlit.py
evals/: run_evals.py
src/: __init__.py  config.py  data_loader.py  domain_tools.py  graph.py  llm.py  logging_utils.py  prompts.py  rag.py  schemas.py
tests/: test_setup.py
