[project]
name = "supply-chain-ai-copilot"
version = "0.1.0"
description = "Local-first AI planning copilot for supply chain inventory risk analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "duckdb",
    "fastapi",
    "numpy",
    "ollama",
    "pandas",
    "pydantic",
    "pydantic-ai",
    "python-dotenv",
    "sentence-transformers",
    "streamlit",
    "uvicorn[standard]",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "src", "tests", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]